# sserver

./: .gitignore  README.md  README.rst  dev.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  start.sh  test.sh  tox.ini
.github/workflows/: tests.yml
src/: server.py
src/endpoint/: BaseEndpoint.py
src/log/: Logger.py
src/mixin/: OptionMixin.py
src/sserver/: __init__.py  config.py  default_config.py  routes.py  server.py  setup.py
src/sserver/crypto/: __init__.py
src/sserver/endpoint/: BaseEndpoint.py  __init__.py  base_endpoint.py  route.py  template.py
src/sserver/file/: __init__.py
src/sserver/log/: Logger.py  __init__.py
src/sserver/mixin/: OptionMixin.py  __init__.py  option_mixin.py
src/sserver/parse/: __init__.py  base_literal.py  exception.py  literal.py  parse.py  parse_tree.py
src/sserver/path/: __init__.py  path.py  static.py
src/sserver/template/: __init__.py  template.py  template_renderer.py
src/sserver/templating/: __init__.py  exception.py  register.py  template.py  template_renderer.py  template_tag.py
src/sserver/test/: TestLogger.py
src/sserver/tool/: CacheTools.py  (+6 more)
src/test/: TestLogger.py
sserver/: README.md  config.py  default_config.py  server.py  setup.py  test.sh  urls.py
sserver/endpoint/: BaseEndpoint.py
sserver/log/: Logger.py
sserver/test/: TestLogger.py
sserver/tool/: CacheTools.py  ConfigTools.py  ModuleTools.py  PathTools.py  RouteTools.py  TemplateTools.py
test_proj/: start.sh  uwsgi.ini
tests/: TestLogger.py  parse_test.py  test_log.py
tests/test_proj/: server.py  start.sh
www/: server.py
(+16 files in other folders)
