[metadata]
name = sserver
version = 0.0.1
license = GNU GPLv3
description = A highly configurable and extensible Python server
long_description = README.rst
author = Aaron Boult
classifiers=
   Development Status :: 1 - Planning
   Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src