[metadata]
name = sserver
license = GNU GPLv3
license_file = LICENSE
description = A highly configurable and extensible Python server
long_description = README.rst
author = Aaron Boult
classifiers=
   Development Status :: 1 - Planning
   Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
packages = sserver
package_dir =
    =src
include_package_data = True
install_requires =
    uWSGI>=2.0
python_requires = >=3.6
zip_safe = False

[options.extras_require]
testing =
    tox>=3.25