[metadata]
name = sserver
license = GNU GPLv3
license_file = LICENSE
description = A highly configurable and extensible Python server
long_description = file: README.rst, LICENSE
author = Aaron Boult
classifiers=
   Development Status :: 1 - Planning

[options]
packages =
    sserver
    sserver.crypto
    sserver.endpoint
    sserver.mixin
    sserver.path
    sserver.util
package_dir =
    =src
include_package_data = True
install_requires =
    redis>=4.2
python_requires = >=3.6
zip_safe = False

[options.extras_require]
testing =
    tox>=3.25
    flake8>=4.0